# ChessOpenGL

./: .gitignore  CMakeLists.txt  README.md  game.cpp  game.h  gameInfo.h  gui.cpp  gui.h  main.cpp  minimax.cpp  piece.cpp  piece.h  pieceInfo.h
gui/: ebo.h  gui.cpp  gui.h  shader.h  vao.h  vbo.cpp  vbo.h
resources/shaders/: default.frag  default.vert
